test/core/errors/offsets_error/zs/signed_integer_error.zs
package signed_integer_error;

struct SignedIntegerError
{
    int32   offset;
offset:
    uint32  values[];
};
